--- a/home/dot_config/foot/foot.ini
+++ b/home/dot_config/foot/foot.ini
@@ -8,7 +8,8 @@
 # title=foot
 # locked-title=no
 
-font=monospace:size=12
+# font=monospace:size=12
+font=Iosevka NFM:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -28,7 +29,7 @@ font=monospace:size=12
 # pad=0x0                             # optionally append 'center'
 # resize-delay-ms=100
 
-# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 # bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
@@ -46,7 +47,7 @@ font=monospace:size=12
 # command-focused=no
 
 [scrollback]
-# lines=1000
+lines=10000
 # multiplier=3.0
 # indicator-position=relative
 # indicator-format=""
@@ -60,7 +61,7 @@ font=monospace:size=12
 
 [cursor]
 # style=block
-# color=<inverse foreground/background>
+color=002b36 93a1a1
 # blink=no
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
@@ -134,8 +135,8 @@ font=monospace:size=12
 # scrollback-down-page=Shift+Page_Down
 # scrollback-down-half-page=none
 # scrollback-down-line=none
-# clipboard-copy=Control+Shift+c XF86Copy
-# clipboard-paste=Control+Shift+v XF86Paste
+clipboard-copy=Control+c XF86Copy
+clipboard-paste=Control+v XF86Paste
 # primary-paste=Shift+Insert
 # search-start=Control+Shift+r
 # font-increase=Control+plus Control+equal Control+KP_Add
@@ -157,7 +158,7 @@ font=monospace:size=12
 # noop=none
 
 [search-bindings]
-# cancel=Control+g Control+c Escape
+cancel=Control+g Control+Shift+c Escape
 # commit=Return
 # find-prev=Control+r
 # find-next=Control+s
@@ -178,7 +179,7 @@ font=monospace:size=12
 # unicode-input=none
 
 [url-bindings]
-# cancel=Control+g Control+c Control+d Escape
+cancel=Control+g Control+Shift+c Control+d Escape
 # toggle-url-visible=t
 
 [text-bindings]
