fish config chnage

--- a/home/dot_config/foot/foot.ini
+++ b/home/dot_config/foot/foot.ini
@@ -2,11 +2,15 @@
 
 # shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
+term=foot
 # login-shell=no
 
 # app-id=foot
 # title=foot
 # locked-title=no
+
+# themes
+include=/usr/share/foot/themes/nord
 
 # font=monospace:size=12
 font=IosevkaTerm Nerd Font Mono:size=12
