--- a/home/dot_config/kitty/kitty.conf
+++ b/home/dot_config/kitty/kitty.conf
@@ -2,6 +2,8 @@
 
 # https://sw.kovidgoyal.net/kitty/conf/
 
+# linux_display_server x11
+
 # To get a full list of supported fonts use the `kitty +list-fonts` command.
 font_family     Iosevka Nerd Font Mono
 #font_family      JetBrainsMono Nerd Font
