--- a/home/dot_config/hypr/executable_hyprland.conf
+++ b/home/dot_config/hypr/executable_hyprland.conf
@@ -1,148 +1,166 @@
-########################################################################################
- __  __ _       _                 _ 
-|  \/  (_)_ __ (_)_ __ ___   __ _| |
-| |\/| | | '_ \| | '_ ` _ \ / _` | |
-| |  | | | | | | | | | | | | (_| | |
-|_|  |_|_|_| |_|_|_| |_| |_|\__,_|_|
-                                    
- _   _                  _                 _    ____             __ _           
-| | | |_   _ _ __  _ __| | __ _ _ __   __| |  / ___|___  _ __  / _(_) __ _ ___ 
-| |_| | | | | '_ \| '__| |/ _` | '_ \ / _` | | |   / _ \| '_ \| |_| |/ _` / __|
-|  _  | |_| | |_) | |  | | (_| | | | | (_| | | |__| (_) | | | |  _| | (_| \__ \
-|_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|  \____\___/|_| |_|_| |_|\__, |___/
-       |___/|_|                                                      |___/    
-#########################################################################################
+# This is an example Hyprland config file.
+#
+# Refer to the wiki for more information.
 
-# You have to change this based on your monitor 
-# monitor=eDP-1,1920x1080@60,0x0,1
+#
+# Please note not all available settings / options are set here.
+# For a full list, see the wiki
+#
+
+# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,1
-#monitor=,highres,auto,2
-# set xwayland scale
-#exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-# toolkit -specific scale
-#env = GDK_SCALE,2
-#env = XCURSOR_SIZE,32
+# monitor=,1920x1080@60,auto,auto
+# monitor=Virtual-1,1920x1080@60,auto,1
 
-# Status bar :) 
-# exec-once=eww open bar
-exec-once=waybar
+exec-once = waybar
+exec-once = fcitx5 -D
 
-#Notification 
-exec-once=dunst
-# Wallpaper
-exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill
-# For screen sharing 
-#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# For keyboard 
-exec-once=fcitx5 -D
 # For lockscreen
-# exec-once=swayidle -w timeout 200 'swaylock-fancy'
+exec-once = swayidle -w timeout 200 'swaylock-fancy'
+
 # Start Page
-exec-once=~/.config/hypr/scripts/startpage.sh
+exec-once = ~/.config/hypr/scripts/starpage.sh
+# wallpapers
+# exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/night.jpg -m fill
 
-# Bluetooth
-#exec-once=blueman-applet # Make sure you have installed blueman
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-# Screen Sharing 
-exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=~/.config/hypr/scripts/screensharing.sh
+# Execute your favorite apps at launch
+# exec-once = waybar & hyprpaper & firefox
 
+# Source a file (multi-file configs)
+# source = ~/.config/hypr/myColors.conf
+
+# Set programs that you use
+$terminal = foot
+$fileManager = dolphin
+$menu = rofi --show drun
+# Some default env vars.
+env = XCURSOR_SIZE,24
+
+# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-  # Remap Capslock -> Esc for Vim users  
-#  kb_options=caps:escape 
-  repeat_rate=50
-  repeat_delay=240
+    kb_layout = us
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
 
-  touchpad {
-    disable_while_typing=1
-    natural_scroll=1
-    clickfinger_behavior=1
-    middle_button_emulation=0
-    tap-to-click=1
-  }
-}
+    follow_mouse = 1
 
+    touchpad {
+        natural_scroll = false
+    }
 
-gestures { 
-  workspace_swipe=true 
-  workspace_swipe_min_speed_to_force=5
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
-    layout=dwindle
-    sensitivity=1.0 # for mouse cursor
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in=5
-    gaps_out=20
-    border_size=2
-    col.active_border=0xff5e81ac
-    col.inactive_border=0x66333333
+    gaps_in = 5
+    gaps_out = 20
+    border_size = 2
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
 
-    apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+    layout = dwindle # master or dwindle
+    sensitivity = 1.0 # for mouse cursor
+
+    gaps_in = 5
+    gaps_out = 20
+    border_size = 2
+    col.active_border = 0xff5e81ac
+    col.inactive_border = 0x66333333
+
+    apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    allow_tearing = false
 }
 
 decoration {
-    rounding=18
-    blur=1
-    blur_size=6.8 # minimum 1
-    blur_passes=2 # minimum 1, more passes = more resource intensive.
-    blur_new_optimizations = true   
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
-    drop_shadow=true
-    shadow_range=15
-    col.shadow=0xffa7caff
-    col.shadow_inactive=0x50000000
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+
+    rounding = 18
+
+    blur {
+        enabled = true
+        size = 6.8
+        passes = 2
+        
+        vibrancy = 0.1696
+    }
+
+    drop_shadow = true
+    shadow_range = 15
+    shadow_render_power = 3
+    col.shadow = 0xffa7caff
+    col.shadow_inactive = 0x50000000
 }
 
-# Blur for waybar 
-blurls=waybar
-blurls=lockscreen
+# Blur for waybar
+blurls = waybar
+blurls = lockscreen
 
-#animations {
-#    #enabled=1
-#    # bezier=overshot,0.05,0.9,0.1,1.1
-#    bezier=overshot,0.13,0.99,0.29,1.1
-#    animation=windows,1,4,overshot,popin
-#    animation=fade,1,10,default
-#    animation=workspaces,1,6,overshot,slide
-#    animation=border,1,10,default
-#}
+animations {
+    enabled = true
+
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    bezier=overshot,0.13,0.99,0.29,1.1
+    animation=windows,1,4,overshot,popin
+    animation=fade,1,10,default
+    animation=workspaces,1,6,overshot,slide
+    animation=border,1,10,default
+}
 
 dwindle {
-    pseudotile=1 # enable pseudotiling on dwindle
-    # force_split=2
-    force_split=0
+    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # you probably want this
+    force_split = 0
     no_gaps_when_only = true
 }
 
 master {
-  new_on_top=true
-  no_gaps_when_only = true
+    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    # new_is_master = true
+    new_on_top = true
+    no_gaps_when_only = true
+}
+
+gestures {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    workspace_swipe = true
+    workspace_swipe_min_speed_to_force = 5
 }
 
 misc {
-  disable_hyprland_logo=true
-  disable_splash_rendering=true
-  mouse_move_enables_dpms=true
-  vfr = false
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+    mouse_move_enables_dpms = true
+    vfr = false
 }
 
-########################################################################################
+# Example per-device config
+# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+device:epic-mouse-v1 {
+    sensitivity = -0.5
+}
 
-\ \        / (_)         | |                   |  __ \     | |          
-  \ \  /\  / / _ _ __   __| | _____      _____  | |__) |   _| | ___  ___ 
-   \ \/  \/ / | | '_ \ / _` |/ _ \ \ /\ / / __| |  _  / | | | |/ _ \/ __|
-    \  /\  /  | | | | | (_| | (_) \ V  V /\__ \ | | \ \ |_| | |  __/\__ \
-     \/  \/   |_|_| |_|\__,_|\___/ \_/\_/ |___/ |_|  \_\__,_|_|\___||___/
-
-########################################################################################
-
-
-# Float Necessary Windows
-windowrule=float,Rofi
-windowrule=float,pavucontrol
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+windowrule = float, rofi
+windowrule = float, pavucontrol
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
@@ -152,6 +170,7 @@ windowrulev2 = float,class:^(org.twosheds.iwgtk)$
 windowrulev2 = float,class:^(blueberry.py)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float,class:^(geeqie)$
+
 
 # Increase the opacity 
 windowrule=opacity 0.92,Thunar
@@ -166,6 +185,7 @@ windowrule=opacity 1,neovim
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 
+
 ###########################################
   ____  _           _ _                 
  |  _ \(_)         | (_)                
@@ -178,18 +198,36 @@ bindm=SUPER,mouse:273,resizewindow
 
 ###########################################
 
-# example binds
-bind=SUPER,Q,killactive
-bind=SUPER,B,exec,librewolf
-bind=SUPER,F,fullscreen,1
-bind=SUPERSHIFT,F,fullscreen,0
-bind=SUPER,RETURN,exec,kitty
-bind=SUPER,C,killactive,
-bind=SUPERSHIFT,Q,exit,
-bind=SUPER,E,exec,pcmanfm
-bind=SUPER,D,exec, rofi -show drun
-bind=SUPER,P,pseudo,
-bind=SUPER,ESCAPE,exec,sudo systemctl suspend
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+$mainMod = SUPER
+
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, RETURN, exec, $terminal
+bind = CTRL, Q, killactive,
+bind = $mainMod, M, exit,
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, R, exec, rofi -show drun
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 bind=,XF86AudioMute,exec,~/.config/hypr/scripts/volume mute
 bind=,XF86AudioLowerVolume,exec,~/.config/hypr/scripts/volume down
@@ -203,6 +241,7 @@ bind=SUPERSHIFT,E,exec,wlogout
 bind = SUPER, T, togglefloating,
 bind=SUPERSHIFT,P,exec,pomotroid --in-process-gpu
 
+
 # Screen shot 
 bind=SUPERSHIFT,S,exec,grim -g "$(slurp)" - | swappy -f -
 # Screen recorder
@@ -210,11 +249,7 @@ bind=SUPER,R,exec,wf-recorder -g "$(slurp)"
 # Emoji selector 
 bind=SUPER,E,exec,rofi -modi emoji -show emoji
 
-
-bind=SUPERSHIFT,RETURN,layoutmsg,swapwithmaster
-
-# bind=SUPER,j,layoutmsg,cyclenext
-# bind=SUPER,k,layoutmsg,cycleprev
+bind = SUPERSHIFT, RETURN, layoutmsg, swapwithmaster
 
 bind=SUPER,j,movefocus,d
 bind=SUPER,k,movefocus,u
@@ -233,6 +268,7 @@ bind=SUPERSHIFT,l,movewindow,r
 bind=SUPERSHIFT,k,movewindow,u
 bind=SUPERSHIFT,j,movewindow,d
 
+
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
@@ -244,13 +280,26 @@ bind=SUPER,8,workspace,8
 bind=SUPER,9,workspace,9
 bind=SUPER,0,workspace,10
 
-bind=SUPERSHIFT,1,movetoworkspacesilent,1
-bind=SUPERSHIFT,2,movetoworkspacesilent,2
-bind=SUPERSHIFT,3,movetoworkspacesilent,3
-bind=SUPERSHIFT,4,movetoworkspacesilent,4
-bind=SUPERSHIFT,5,movetoworkspacesilent,5
-bind=SUPERSHIFT,6,movetoworkspacesilent,6
-bind=SUPERSHIFT,7,movetoworkspacesilent,7
-bind=SUPERSHIFT,8,movetoworkspacesilent,8
-bind=SUPERSHIFT,9,movetoworkspacesilent,9
-bind=SUPERSHIFT,0,movetoworkspacesilent,10
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspace, 1
+bind = $mainMod SHIFT, 2, movetoworkspace, 2
+bind = $mainMod SHIFT, 3, movetoworkspace, 3
+bind = $mainMod SHIFT, 4, movetoworkspace, 4
+bind = $mainMod SHIFT, 5, movetoworkspace, 5
+bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Example special workspace (scratchpad)
+bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
