--- a/home/dot_config/waybar/config
+++ b/home/dot_config/waybar/config
@@ -1,13 +1,38 @@
 {
-    // "layer": "top", // Waybar at top layer
+    "layer": "top", // Waybar at top layer
     "position": "top", // Waybar position (top|bottom|left|right)		
     //"height": 18, // Waybar height (to be removed for auto height)
     //"width": 1920, // Waybar width
+    "margin-top": 3,
+    "margin-left": 1,
+    "margin-bottom": 2,
+    "margin-right": 1,
+    "spacing": 5,
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "custom/github", "custom/reddit", "custom/youtube", "sway/window"],
+    "modules-left": ["custom/launcher","hyprland/workspaces", "sway/workspaces", "custom/github", "custom/reddit", "custom/youtube", "sway/window", "hyprland/window"],
     //"modules-center": ["sway/mode"],
-    "modules-right": ["pulseaudio","custom/weather", "disk", "memory", "cpu", "network", "custom/pacman","tray","custom/recorder","clock","custom/power",],
+    "modules-right": ["pulseaudio","custom/weather", "disk", "memory", "cpu", "network", "custom/pacman","tray", "clock","custom/power",],
     // Modules configuration
+    "hyprland/workspaces":{
+      "format": "{icon}",
+      "on-click": "activate",
+      "format-icons": {
+        "1": " ",
+        "2": " ",
+        "3": " ",
+        "4": "",
+        "5": " ",
+        "6": " ",
+        "7": " ",
+        "8": " ",
+        "active": "",
+        "urgent": "",
+        "default": ""
+      }
+    },
+    "hyprland/window":{
+        "format": "{}"
+    },
     "sway/workspaces": {
       "disable-scroll": false,
       "all-outputs": true,
@@ -30,9 +55,6 @@
       },
       "icon-size": 15
     },
-    "river/tags": {
-      "num-tags": 7
-    },
     "sway/mode": {
       "format": "<span style=\"italic\">{}</span>"
     },
@@ -54,23 +76,8 @@
        "on-click": "playerctl play-pause",
        "on-click-right": "cmus-remote -u",
     },
-    "custom/recorder": {
-       "return-type": "json",
-       "format":"{}",
-       "interval":3,
-       "exec": "fish -c recording | tail -1",
-       "exec-on-event": "fish -c recording | tail -1",
-       "on-click": "kill -INT -$(pgrep wf-recorder)"
-    },
     "tray": {
          "spacing": 10,
-    },
-    "idle_inhibitor": {
-         "format": "{icon}",
-         "format-icons": {
-         "activated": "",
-         "deactivated": ""
-      }
     },
     "mpd": {
 	    "format": "{stateIcon} {consumeIcon} {randomIcon} {repeatIcon} {singleIcon} {artist}-{title} ({elapsedTime:%M:%S}/{totalTime:%M:%S})",
@@ -144,9 +151,6 @@
         // "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
-    "battery#bat2": {
-        "bat": "BAT0"
-    },
     "network": {
         "interface": "ens33", // (Optional) To force the use of this interface
         "format-wifi": " ",
@@ -178,6 +182,10 @@
         "on-scroll-up": "pactl set-sink-volume @DEFAULT_SINK@ +2% && pamixer --get-volume > $SWAYSOCK.wob",
         "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -2% && pamixer --get-volume > $SWAYSOCK.wob",
     },
+    "custom/launcher":{
+        "format": " <span color='#6a92d7'> </span>",
+        "on-click": "rofi -show drun",
+    },
     "custom/weather": {
         "exec": "~/.config/waybar/scripts/weather-bar.sh",
         "format": "{}",
@@ -198,9 +206,8 @@
         "path": "/home",
     },
     "custom/power": {
-      	"format": "⏻",
-      	"on-click": "wlogout -p layer-shell",
-    	  "tooltip": false 
+        "format": " <span color='#6a92d7'>⏻ </span>",
+        "on-click": "bash ~/.config/waybar/scripts/power-menu/powermenu.sh",
     },
     "custom/github": {
     	  "format": "",
@@ -217,25 +224,4 @@
     	  "on-click": "xdg-open https://www.youtube.com/",
     	  "tooltip": false 
     },
-    "custom/mail": {
-       	"format": "",
-        "on-click": "xdg-open https://moncourriel.etsmtl.ca/",
-    	  "tooltip": false 
-    },
-    "custom/library": {
-        "format": "",
-        "on-click": "fish -c manga_menu",
-    	  "tooltip": false 
-    },
-    "wlr/taskbar": {
-        "format": "{icon}",
-        // "format": "{title:.16}",
-        "icon-theme": "Papirus",
-        "icon-size": 15,
-        "on-click": "activate",
-        "markup": true,
-        "max-length": 7,
-        "on-click-right": "minimize",
-        "on-click-middle": "close"
-    }
 }
