--- a/home/dot_config/hypr/executable_hyprland.conf
+++ b/home/dot_config/hypr/executable_hyprland.conf
@@ -65,7 +65,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle # master or dwindle
-    sensitivity = 1.0 # for mouse cursor
+    # sensitivity = 1.0 # for mouse cursor
 
     gaps_in = 5
     gaps_out = 20
@@ -73,7 +73,7 @@ general {
     col.active_border = 0xff5e81ac
     col.inactive_border = 0x66333333
 
-    apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
+    # apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -86,14 +86,14 @@ decoration {
 
     blur {
         enabled = true
-        size = 6.8
+        size = 6
         passes = 2
         
         vibrancy = 0.1696
     }
 
-    drop_shadow = true
-    shadow_range = 15
+    # drop_shadow = true
+    # shadow_range = 15
     shadow_render_power = 3
     col.shadow = 0xffa7caff
     col.shadow_inactive = 0x50000000
