change foot config for font

--- a/home/dot_config/foot/foot.ini
+++ b/home/dot_config/foot/foot.ini
@@ -13,7 +13,7 @@ term=foot
 include=/usr/share/foot/themes/nord
 
 # font=monospace:size=12
-font=IosevkaTerm Nerd Font Mono:size=12
+font=Iosevka Nerd Font Mono:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -27,13 +27,14 @@ font=IosevkaTerm Nerd Font Mono:size=12
 # box-drawings-uses-font-glyphs=no
 # dpi-aware=auto
 
+
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
 # pad=0x0                             # optionally append 'center'
 # resize-delay-ms=100
 
-notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 # bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
